fixed line spacing

--- a/labs/lab1/css/styles.css
+++ b/labs/lab1/css/styles.css
@@ -35,7 +35,7 @@ nav a:hover {
 }
 
 #me {
-  float:left;
+  float:center;
 }
 
 #welcomeText {
